mobile: Adjust subtle css alignments

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -18,6 +18,7 @@
   clear: both;
   overflow: auto;
   font-family: "Apple SD Gothic Neo", 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light",  "맑은 고딕", sans-serif;
+  word-wrap: break-word;
 
   ul, ol {
     padding: 5px 0 5px 2.5em;
