--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -1,6 +1,10 @@
 @media all and (max-width: 640px){
+    .board-header .title {
+        border-radius: 0 !important;
+    }
     .board-actrow {
         padding: 2px;
+        line-height: 40px;
     }
     .board-comment-wrap {
         padding: 2px;
