markdown: Change default markdown render font

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -17,7 +17,7 @@
   font-size: 1.15em;
   clear: both;
   overflow: auto;
-  font-family: "Apple SD Gothic Neo", 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light",  "맑은 고딕", sans-serif;
+  font-family: "Apple SD Gothic Neo", "Noto Sans", "New Roboto", "Nanum Gothic", "Malgun Gothic", sans-serif;
   word-wrap: break-word;
 
   ul, ol {
