--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -40,11 +40,11 @@
     }
 }
 
-<div class="unsupported">
+<div class="unsupported hidden">
     <div class="unsupported-inner">
         <p id="unsupported-content">
-            <i class="yobicon-alert"></i>
-            @Html(Messages("error.unsupported.ie"))
+            <!-- <i class="yobicon-alert"></i>
+            @Html(Messages("error.unsupported.ie")) -->
         </p>
     </div>
 </div>
