--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -1,32 +1,23 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21c Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Sangcheol Hwang
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(title: String)(theme:String)(content: Html)
+@titleArray = @{title.split(" \\|:\\| ")}
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>@title</title>
+<title>@titleArray(0)</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta property="og:title" content="@titleArray(0)" />
+<meta property="og:url" content="@play.mvc.Http.Context.current().request().path()" />
+<meta property="og:type" content="website" />
+<meta property="og:description" content="@{titleArray(titleArray.length-1)}" />
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("bootstrap/css/bootstrap.css")">
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobicon/style.css")">
