api: Support project exports
Now, project admin user(s) can export who's specific projects.

e.g.
Assume that user 'tester' is admin of project name 'sample'.
If tester call below url with Accept header with 'application/json'
and Yona-Token header with valid token, project issues and posts will be
download in format of JSON.

Accept: application/json
Yona-Token: dsflaksjflksadjflasjfaslfjds=

http://repo.yona.io/tester/sample/exports

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -167,7 +167,7 @@
         });
 
         $('.board-labels select').on('change', function(e){
-            var url = "@Html(routes.BoardApi.updatePostLabel(project.owner, project.name, post.getNumber).toString())";
+            var url = "@Html(controllers.api.routes.BoardApi.updatePostLabel(project.owner, project.name, post.getNumber).toString())";
             $.ajax({
                 url: url,
                 method: "POST",
