migration: Update view page

--- a/app/views/migration/home.scala.html
+++ b/app/views/migration/home.scala.html
@@ -117,15 +117,11 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="td-title left-title">첨부파일</td>
+                                <td class="td-title left-title">주의 사항!!</td>
                                 <td colspan="2" class="text-align-left">
-                                    <div class="label label-warning">
-                                        단일 파일기준 50M 미만 크기의 첨부파일만 이동됩니다!
-                                    </div>
                                     <div class="caution">
-                                        Yona to Githbub 마이그레이션 가이드를 꼭 읽어주세요.
+                                        작업 시작전에 Yona to Githbub 마이그레이션 가이드를 꼭 읽어주세요.
                                     </div>
-                                    <div class="btn-group pull-right"><button class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="사전 wiki 생성을 잊었을 경우" ng-click="vm.showMoreDesc=!vm.showMoreDesc;vm.delegateAttachmentsMigration(true)" ng-if="vm.destination.projectName" ng-disabled="!vm.source.postCount && !vm.source.issueCount || vm.importBtnDisabled" ng-cloak>파일이동만 다시 한번 더 요청하기</button></div>
                                 </td>
                             </tr>
                     <tbody>
