etc: support twitter cards

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -18,6 +18,10 @@
 <meta property="og:url" content="@play.mvc.Http.Context.current().request().path()" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="@{titleArray(titleArray.length-1)}" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="@titleArray(0)" />
+<meta name="twitter:url" content="@play.mvc.Http.Context.current().request().path()" />
+<meta name="twitter:description" content="@{titleArray(titleArray.length-1)}" />
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("bootstrap/css/bootstrap.css")">
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobicon/style.css")">
