intro: Fix typo

--- a/app/views/index/partial_intro.scala.html
+++ b/app/views/index/partial_intro.scala.html
@@ -22,7 +22,7 @@
 <div class="siteintro">
     <div class="siteintro-cover">
         <div class="siteintro-wrap">
-            <h1 class="site-heading">21 Century Software Development Platform</h1>
+            <h1 class="site-heading">21st Century Software Development Platform</h1>
             <ul class="site-features">
                 <li>Just focus on what you have to do</li>
             </ul>
