logo: Change logo css style name
Change yona logo css style name because of google search crawler's
unexpected collecting

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -63,7 +63,7 @@
 }
 
 .gnb-inner {
-    .logo-title {
+    .logo-letter {
         background: #FF5722;
         padding: 6px 10px !important;
         color: #803131 !important;
