--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -52,7 +52,7 @@
     <div class="gnb-inner">
         <ul class="gnb-nav">
             <li>
-                <a href="@routes.Application.index()" class="logo logo-title">Y</a>
+                <a href="@routes.Application.index()" class="logo logo-letter">Y</a>
             </li>
             <li class="@isActiveMenu(MenuType.PROJECTS)">
                 <a href="@routes.ProjectApp.projects()">@Messages("title.projectList")</a>
