--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -1,26 +1,12 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(post:Posting, commentForm: play.data.Form[PostingComment],  project:Project)
 
+@import org.apache.commons.lang.StringUtils
 @import utils.JodaDateUtil
 @import utils.TemplateHelper._
 @import utils.AccessControl._
@@ -72,6 +58,12 @@
               <strong class="name">@Messages("common.noAuthor")</strong>
             }
           </a>
+            @if(post.history != null){
+                <div class="posting-history">
+                    <a href="#-yona-posting-history" data-toggle="modal">@Messages("change.history")</a>
+                    @common.partial_history(post)
+                </div>
+            }
           <div class="board-labels pull-right">
             @if(!IssueLabel.findByProject(project).isEmpty){
                 @if(isAllowed(UserApp.currentUser(), post.asResource(), Operation.UPDATE)){
@@ -82,7 +74,11 @@
             }
             </div>
         </div>
-        <div class="content markdown-wrap">@Html(Markdown.render(post.body, post.asResource().getProject()))</div>
+        @if(StringUtils.isEmpty(post.body)){
+            <div class="content empty-content"></div>
+        } else {
+            <div class="content markdown-wrap">@Html(Markdown.render(post.body, post.asResource().getProject()))</div>
+        }
         <div class="attachments" id="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.BOARD_POST.toString(), post.id.toString()))"></div>
     	</div>
     	<div class="board-footer board-actrow">
