--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3880,6 +3880,9 @@ label.issue-item-row {
         text-decoration: line-through;
         padding: 2px;
     }
+    .diff-ellipsis {
+        background-color: #ccc;
+    }
 }
 
 .voter-list {
