board: Fix board view label seletion css

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6419,6 +6419,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .board-labels {
   width: 400px;
+  min-width: 120px;
   display: inline-block;
   dt {
     display: none;
