contents-history: Change diff ellipsis style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3862,6 +3862,7 @@ label.issue-item-row {
         font-size: 16px;
         background-color: #eee;
         line-height: 40px;
+        padding: 5px;
     }
     .added {
         background-color: #abdd52;
@@ -3881,7 +3882,9 @@ label.issue-item-row {
         padding: 2px;
     }
     .diff-ellipsis {
-        background-color: #ccc;
+        color: #bdbdbd;
+        font-size: 16px;
+        font-family: serif;
     }
 }
 
