google: Increase search engine compatibility

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -188,10 +188,10 @@
     .gnb-search-form {
         display: none !important;
     }
-    .short-title {
+    .short-menu {
         display: block;
     }
-    .normal-title {
+    .menu-name {
         display: none;
     }
     .project-menu-nav li a {
