markdown: more robust & clean rendering css

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -19,6 +19,9 @@
         p, ul, ol {
             font-size: 16px !important;
         }
+        li > img {
+            max-width: 100% !important;
+        }
         img {
             padding: 0 !important;
             box-shadow: none !important;
