intro: Update intro page styles
New head cover image from:
https://unsplash.com/@svetacreative?photo=tI_Odb7ZU6M

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -731,10 +731,11 @@
 .siteintro {
     border-bottom:1px solid #e8e8e8;
 
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0,0,0, 0.3)), url('../images/bg-samples/desk-pen-photo.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0, 0.3)), url('../images/bg-samples/photo-svetacreative.jpg');
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
+    border-bottom: 1px solid #333;
 
     .siteintro-cover {
         opacity: 1;
@@ -758,7 +759,8 @@
             font-size:34px;
             font-weight:normal;
             color: #FAFAFA;
-            font-family: Apple SD Gothic Neo, D2Coding, sans-serif;
+            font-family: sans-serif;
+            opacity: 0.9;
         }
 
         .site-features {
@@ -770,7 +772,7 @@
             margin-top:5px;
 
             li {
-                color:#9E9E9E;
+                color:#FFF;
                 display:inline-block;
                 font-size:16px;
                 margin-left:5px;
@@ -779,6 +781,7 @@
                 &:first-child {
                     margin-left:0;
                 }
+                opacity: 0.5;
             }
         }
     }
@@ -801,7 +804,7 @@
 
     h2 {
         padding:0;
-        font-size: 20px;
+        font-size: 26px;
         font-weight:normal;
         margin-top: 30px;
         display:block;
