--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6499,3 +6499,29 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .resp-comment-avatar {
     display: none;
 }
+
+.show-watchers {
+    display: inline-block;
+    margin-left: 3px;
+    &:hover {
+        cursor: pointer;
+    }
+    height: 30px;
+    button {
+        height: 30px;
+    }
+}
+
+.watcher-list {
+    display: none;
+    padding: 10px;
+    margin-bottom: 15px;
+    background-color: #fafafa;
+    .watcher-name {
+        padding: 5px;
+        &:hover {
+            background-color: #f1f1f1;
+            text-decoration: none;
+        }
+    }
+}
