css: Change some css
- Increase title of issue/post list font size: 15px -> 16px
- Change default label color sets
- Modify project label buttons margin at low resolution

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3538,7 +3538,7 @@ label.issue-item-row {
 
         .title {
             color:#333;
-            font-size:15px;
+            font-size:16px;
             font-weight: 600;
 
             &.project {
@@ -3698,7 +3698,7 @@ label.issue-item-row {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    color: darken(@secondary, 10%);
+    color: #5da8c4;
     font-size:11px;
     .border-radius(6px);
 }
