--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -386,6 +386,10 @@
             margin-left: 0 !important;
         }
     }
+
+    .label-editor-wrap .new-label-wrap .btn-submit {
+        margin: 10px 0;
+    }
 }
 
 @media all and (max-width:1199px){
