--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3698,7 +3698,7 @@ label.issue-item-row {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    color: #5da8c4;
+    color: #999;
     font-size:11px;
     .border-radius(6px);
 }
