login: Change 'remember me' option to use by default when logging in

--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -53,7 +53,7 @@
 
       <div class="act-row mt5">
         <div class="remember-me-wrap pull-left">
-          <input id="remember-me" type="checkbox" name="rememberMe" class="checkbox" autocomplete="off">
+          <input id="remember-me" type="checkbox" name="rememberMe" class="checkbox" checked>
           <label for="remember-me" class="bg-checkbox">@Messages("title.rememberMe")</label>
         </div>
 
