--- a/app/views/common/loginDialog.scala.html
+++ b/app/views/common/loginDialog.scala.html
@@ -53,7 +53,7 @@
 
       <div class="act-row right-txt mt20">
         <div class="pull-left">
-          <input id="remember-meD" type="checkbox" name="rememberMe" class="checkbox">
+          <input id="remember-meD" type="checkbox" name="rememberMe" class="checkbox" checked>
           <label for="remember-meD" class="bg-checkbox">@Messages("title.rememberMe")</label>
         </div>
 
